--- a/escamboapp/app/views/layouts/site.html.erb
+++ b/escamboapp/app/views/layouts/site.html.erb
@@ -29,9 +29,9 @@
 </head>
 
 <body>
-
+    <%= render partial: "layouts/site_shared/navigation" %>
     <%= yield %>
-
+    <%= render partial: "layouts/site_shared/footer" %>
 </body>
 
 </html>
