--- a/escamboapp/app/views/backoffice/admins/index.html.erb
+++ b/escamboapp/app/views/backoffice/admins/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="page-header">Categorias</h1>
+<h1 class="page-header">Administradores</h1>
 
     <% if notice %>
         <div class="alert alert-success alert-dismissable">
@@ -9,8 +9,8 @@
 
     <div class="panel panel-default">
         <div class="panel-heading">
-            Listando Categorias
-            <%= link_to new_backoffice_category_path, class:"btn btn-success btn-circle pull-right", style:"margin-top: -5px" do %>
+            Listando administradores
+            <%= link_to new_backoffice_admin_path, class:"btn btn-success btn-circle pull-right", style:"margin-top: -5px" do %>
               <i class="fa fa-plus"></i>
             <% end %>
         </div>
@@ -26,17 +26,27 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <% @categories.each do |category| %>
+                        <% @admins.each do |admin| %>
                         <tr>
-                            <td><%= category.id %></td>
-                            <td><%= category.description %></td>
+                            <td><%= admin.id %></td>
+                            <td><%= admin.email %></td>
                             <td style="width: 150px">
-                                <%= link_to edit_backoffice_category_path(category), class: "btn btn-primary btn-circle" do %>
+                                <%= link_to edit_backoffice_admin_path(admin), class: "btn btn-primary btn-circle" do %>
                                   <i class="fa fa-edit"></i>
                                 <% end %>
 
-                                <button type="button"  disabled="disabled" class="btn btn-danger btn-circle"><i class="fa fa-minus"></i>
-                                </button>
+                                <% if current_admin.id != admin.id %>
+                                    <%= link_to backoffice_admin_path(admin), method: :delete,
+                                    class: "btn btn-danger btn-circle",
+                                    data: {confirm: "Você realmente deseja excluir (<b>#{admin.email})</b>?"} do %>
+                                        <i class="fa fa-minus"></i>
+                                    <% end %>
+                                <% else %>
+                                    <%= link_to '#', disabled: "disabled", class: "btn btn-danger btn-circle" do %>
+                                        <i class="fa fa-minus"></i>
+                                    <% end %>
+                                <% end %>
+
                             </td>
                         </tr>
                         <% end %>
