--- a/escamboapp/app/views/backoffice/admins/index.html.erb
+++ b/escamboapp/app/views/backoffice/admins/index.html.erb
@@ -21,7 +21,9 @@
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>Descrição</th>
+                            <th>Nome</th>
+                            <th>Email</th>
+                            <th>Tipo de Acesso</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -29,7 +31,9 @@
                         <% @admins.each do |admin| %>
                         <tr>
                             <td><%= admin.id %></td>
+                            <td><%= admin.name %></td>
                             <td><%= admin.email %></td>
+                              <td><%= admin.role_br %></td>
                             <td style="width: 150px">
                                 <%= link_to edit_backoffice_admin_path(admin), class: "btn btn-primary btn-circle" do %>
                                   <i class="fa fa-edit"></i>
