--- a/escamboapp/app/views/backoffice/admins/shared/_form.html.erb
+++ b/escamboapp/app/views/backoffice/admins/shared/_form.html.erb
@@ -21,6 +21,11 @@
             <div class="col-lg-6">
               <%= form_for([:backoffice, @admin]) do |f| %>
                 <div class="form-group">
+                    <label>Nome</label>
+                    <%=  f.text_field :name, class:"form-control", placeholder:"Ex: nome do administrador" %>
+                </div>
+
+                <div class="form-group">
                     <label>Email</label>
                     <%=  f.text_field :email, class:"form-control", placeholder:"Ex: email do administrador" %>
                 </div>
