--- a/escamboapp/app/views/backoffice/admins/shared/_form.html.erb
+++ b/escamboapp/app/views/backoffice/admins/shared/_form.html.erb
@@ -31,6 +31,16 @@
                 </div>
 
                 <div class="form-group">
+                    <%= f.label :role %>
+                    <%= f.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>                    <!-- div we use to change the style in specifs parts of the page -->
+                        <div class="radio">
+                           <%= b.label { b.radio_button + b.text} %>
+                        </div>
+                    <% end %>
+                </div>
+
+
+                <div class="form-group">
                     <label>Senha</label>
                     <%=  f.password_field :password, class:"form-control", placeholder:"Ex: senha" %>
                 </div>
