--- a/escamboapp/app/views/backoffice/admins/shared/_form.html.erb
+++ b/escamboapp/app/views/backoffice/admins/shared/_form.html.erb
@@ -30,16 +30,17 @@
                     <%=  f.text_field :email, class:"form-control", placeholder:"Ex: email do administrador" %>
                 </div>
 
-                <div class="form-group">
-                    <%= f.label :role %>
-                    <%= f.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>                    <!-- div we use to change the style in specifs parts of the page -->
-                        <div class="radio">
-                           <%= b.label { b.radio_button + b.text} %>
-                        </div>
-                    <% end %>
-                </div>
-
-
+                <% if policy(@admin).edit? %>
+                    <div class="form-group">
+                        <%= f.label :role %>
+                        <%= f.collection_radio_buttons(:role, options_for_roles, :id, :description) do |b| %>
+                            <div class="radio">
+                                <%= b.label { b.radio_button + b.text} %>
+                            </div>
+                        <% end %>
+                    </div>
+                <% end %>
+                
                 <div class="form-group">
                     <label>Senha</label>
                     <%=  f.password_field :password, class:"form-control", placeholder:"Ex: senha" %>
