--- a/escamboapp/app/views/backoffice/admins/index.html.erb
+++ b/escamboapp/app/views/backoffice/admins/index.html.erb
@@ -23,7 +23,6 @@
                         <tr>
                             <th>#</th>
                             <th>Nome</th>
-                            <th>Email</th>
                             <th>Tipo de Acesso</th>
                             <th></th>
                         </tr>
@@ -33,14 +32,17 @@
                         <tr>
                             <td><%= admin.id %></td>
                             <td><%= admin.name %></td>
-                            <td><%= admin.email %></td>
-                              <td><%= admin.role_i18n %></td>
+                            <td><%= admin.role_i18n %></td>
                             <td style="width: 150px">
+                                <%= link_to edit_backoffice_send_mail_path(admin), class: "btn btn-info btn-circle", remote: true do %>
+                                  <i class="fa fa-envelope"></i>
+                                <% end %>
+
                                 <%= link_to edit_backoffice_admin_path(admin), class: "btn btn-primary btn-circle" do %>
                                   <i class="fa fa-edit"></i>
                                 <% end %>
 
-                                <% if current_admin.id != admin.id %>
+                                <% if (current_admin.id != admin.id) && policy(@admins).destroy?  %>
                                     <%= link_to backoffice_admin_path(admin), method: :delete,
                                     class: "btn btn-danger btn-circle",
                                     data: {confirm: t('messages.confirm_with', item: admin.name)} do %>   <!-- in this i used the i18n ans passed the admin.name -->
@@ -62,4 +64,6 @@
         </div>
         <!-- /.panel-body -->
     </div>
-    <!-- /.panel -->
+    <!-- this part call a partial render of the modal"mail modal"-->
+
+<%= render partial: 'backoffice/admins/shared/send_mail' %>
