--- a/escamboapp/app/views/backoffice/admins/shared/_send_mail_modal.html.erb
+++ b/escamboapp/app/views/backoffice/admins/shared/_send_mail_modal.html.erb
@@ -8,12 +8,12 @@
       <div class="modal-body">
         <%= form_tag( backoffice_send_mail_index_path, remote:true) do %>
           <div class="form-group">
-            <label for="recipient-name" class="control-label">Recipient:</label>
+            <label for="recipient-text" class="control-label">Recipient:</label>
             <%= text_field_tag(:'recipient-text', nil, class:"form-control", readonly: "readonly") %>
           </div>
           <div class="form-group">
             <label for="recipient-name" class="control-label">Subject:</label>
-            <%= text_field_tag(:'subject-text', nil, class:"form-control") %>
+            <%= text_field_tag(:'subject-text', nil, class:"form-control", required: "required") %>
           </div>
           <div class="form-group">
             <label for="message-text" class="control-label">Message:</label>
