--- a/escamboapp/app/views/layouts/profile.html.erb
+++ b/escamboapp/app/views/layouts/profile.html.erb
@@ -49,6 +49,9 @@
                 <li>
                   <%= link_to "Meus Anúncios", site_profile_ads_path %>
                 </li>
+                <li>
+                  <%= link_to "Novo Anúncio", new_site_profile_ad_path %>
+                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -67,6 +70,11 @@
 
     </div>
     <!-- /#wrapper -->
+    <% if notice %>
+        <script>
+            $.notify("<%= notice %>", "success");
+        </script>
+    <% end %>
 </body>
 
 </html>
