--- a/escamboapp/app/views/layouts/profile.html.erb
+++ b/escamboapp/app/views/layouts/profile.html.erb
@@ -15,10 +15,6 @@
     <%= stylesheet_link_tag    'site', media: 'all' %>
     <%= stylesheet_link_tag    'site/profile', media: 'all' %>
 
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag 'site' %>
-    <%= javascript_include_tag 'site/profile' %>
-
     <%= csrf_meta_tags %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -70,11 +66,19 @@
 
     </div>
     <!-- /#wrapper -->
+
+    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'site' %>
+    <%= javascript_include_tag 'site/profile' %>
+    <%#= javascript_include_tag 'site/profile/ads' %>
+    <%= yield :javascripts %>
+
     <% if notice %>
         <script>
             $.notify("<%= notice %>", "success");
         </script>
     <% end %>
+
 </body>
 
 </html>
