ajusting the login member layout

--- a/escamboapp/app/views/layouts/site.html.erb
+++ b/escamboapp/app/views/layouts/site.html.erb
@@ -11,8 +11,8 @@
 
     <title>ScamboApp</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= stylesheet_link_tag    'site', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag    'site', media: 'all' %>
 
     <%= csrf_meta_tags %>
 
