--- a/escamboapp/app/views/layouts/site_devise.html.erb
+++ b/escamboapp/app/views/layouts/site_devise.html.erb
@@ -12,10 +12,10 @@
     <title>BackOffice - Escamboapp</title>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= stylesheet_link_tag    'backoffice', media: 'all' %>
+    <%= stylesheet_link_tag    'site', media: 'all' %>
 
     <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag 'backoffice' %>
+    <%= javascript_include_tag 'site' %>
 
     <%= csrf_meta_tags %>
 
